Minor grammatical and colour updates

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ const wellbeingColor = "#FFC20A"; -->
         /* style for the label text within a bubble (ie what topic the bubble is) */
         .bubble-label {
             font-weight: normal;
-            fill: rgb(0, 0, 0);
+            fill: #3d3d3d;
             text-anchor: middle;
             pointer-events: none;
             /* text-shadow: 2px 2px 4px rgba(46, 46, 46, 0.5); */
@@ -108,7 +108,7 @@ const wellbeingColor = "#FFC20A"; -->
         /* style for the numeric count displayed in a bubble */
         .percentage-label {
             font-weight: normal;
-            fill: rgb(0, 0, 0);
+            fill: #3d3d3d;
             text-anchor: middle;
             pointer-events: none;
             /* text-shadow: 1px 1px 2px rgba(67, 67, 67, 0.5); */
@@ -208,20 +208,20 @@ const wellbeingColor = "#FFC20A"; -->
         /* specific header for health */
         .health-header {
             background: #44AA99;
-            color: white;
+            color: #3d3d3d;
         }
 
         /* specific header for wellbeing */
         .wellbeing-header {
             background: #FFC20A;
-            color: white;
+            color: #3d3d3d;
         }
 
         /* style for the quotes themselves. Adds a faded background and a left border */
         .interview-quote {
             font-style: italic;
             line-height: 1.25;
-            color: #444;
+            color: #3d3d3d;
             margin-bottom: 15px;
             padding: 15px;
             background: #f9f9f9;
@@ -232,7 +232,7 @@ const wellbeingColor = "#FFC20A"; -->
         /* NEW STYLES FOR NARRATIVE VIEW */
         .narrative-content {
             line-height: 1.25;
-            color: #444;
+            color: #3d3d3d;
             font-size: 1em;
         }
 
@@ -1340,7 +1340,7 @@ const wellbeingColor = "#FFC20A"; -->
             // },
             {
                 topic: "Menstrual Cycle",
-                desc: ".",
+                desc: "",
                 health: 3,
                 wellbeing: 3,
                 narrative: `
